--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ remote_theme: hydecorp/hydejack@v9.1.6
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /img/hnr2024_header.jpg
+accent_image:          /img/hnr2024_header2.png
 accent_color:          rgb(236,149,177)
 
 # This is used for the `theme-color` meta tag,
