--- a/_config.yml
+++ b/_config.yml
@@ -36,13 +36,13 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.png
+logo:                  /img/hnr_logo round.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
   name:                Martin Grandjean
-  email:               
+ # email:               
   # # Used by `jekyll-seo-tag`:
   # twitter:             grandjeanmartin
 
