--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 # Change `author1` to your shortname.
 author1:
   name:              Martin Grandjean
-  email:             <mail@domain.tld>
+  # email:             <mail@domain.tld>
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -15,7 +15,7 @@ author1:
     Open `_data/authors.yml` to edit this text.
 
   # This photo will be used in the about section
-  picture:
+  picture:   /img/hnr_logo round.png
     path:            https://via.placeholder.com/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
