--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,7 +15,7 @@ author1:
     Open `_data/authors.yml` to edit this text.
 
   # This photo will be used in the about section
-  picture:   /img/hnr_logo round.png
+  picture:   /img/hnr_logo_round.png
     path:            https://via.placeholder.com/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
