--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,9 @@ keywords:              []
 # It also used by the `jekyll-seo-tag` plugin.
 logo:                  /img/hnr_logo_round.png
 
+# Favicon (added by MG):
+favicon:               /img/hnr_logo_round.png
+
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
