--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ logo:                  /img/hnr_logo_round.png
 
 # Favicon (added by MG):
 favicon:               /img/hnr_logo_round.png
+apple_touch_icon:      /img/hnr_logo_round.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
