--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ keywords:              []
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /img/hnr_logo_round.png
+logo:                  /img/conference_logo.png
 
 # Favicon (added by MG):
-favicon:               /img/hnr_logo_round.png
-apple_touch_icon:      /img/hnr_logo_round.png
+favicon:               /img/conference_logo.png
+apple_touch_icon:      /img/conference_logo.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
