--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ menu:
     url:               /program/  
   - title:             Practical informations
     url:               /practical/
-  - title:             About
+  - title:             Organization and scientific committee
     url:               /about/
 
 # Add links to the footer.
